RESOLVED FIXED23450
string leaks seen in DumpRenderTree accessibility test code
https://bugs.webkit.org/show_bug.cgi?id=23450
Summary string leaks seen in DumpRenderTree accessibility test code
Darin Adler
Reported 2009-01-20 23:00:13 PST
Need to fix these so the leakbot gets green again and we can see other leaks.
Attachments
patch (2.58 KB, patch)
2009-01-20 23:01 PST, Darin Adler
ap: review+
Darin Adler
Comment 1 2009-01-20 23:01:36 PST
Alexey Proskuryakov
Comment 2 2009-01-20 23:23:06 PST
Comment on attachment 26887 [details] patch r=me
Darin Adler
Comment 3 2009-01-20 23:25:27 PST
Note You need to log in before you can comment on or make changes to this bug.