2009-01-20  Darin Adler  <darin@apple.com>

Reviewed by Alexey Proskuryakov.

        Bug 23450: string leaks seen in DumpRenderTree accessibility test code
        https://bugs.webkit.org/show_bug.cgi?id=23450

        * DumpRenderTree/AccessibilityUIElement.cpp:
        (isAttributeSettableCallback): Add the missing JSStringRelease call.
        (attributeValueCallback): Ditto.



Canonical link: https://commits.webkit.org/32279@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40083 268f45cc-cd09-0410-ab3c-d52691b4dbfc